--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "mongoose": "^6.2.3",
     "multer": "^1.4.4",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "utility": "^1.17.0"
   }
 }
